add tests coverage and readme