@@ -7,116 +7,152 @@ import com.mpmt.backend.entity.Notification;
 import com.mpmt.backend.entity.Task;
 import com.mpmt.backend.service.UserService;
 import com.mpmt.backend.service.ProjectMemberService;
-import com.mpmt.backend.service.TaskAssignmentService;
 import com.mpmt.backend.service.NotificationService;
+import com.mpmt.backend.service.TaskAssignmentService;
 import com.mpmt.backend.service.TaskService;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
-import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@WebMvcTest(UserController.class)
+@ExtendWith(MockitoExtension.class)
 class UserControllerTest {
 
-    @Autowired
-    private MockMvc mockMvc;
-
-    @MockBean
+    @Mock
     private UserService userService;
-    @MockBean
+
+    @Mock
     private ProjectMemberService projectMemberService;
-    @MockBean
+
+    @Mock
     private TaskAssignmentService taskAssignmentService;
-    @MockBean
+
+    @Mock
     private NotificationService notificationService;
-    @MockBean
+
+    @Mock
     private TaskService taskService;
 
-    @Autowired
+    @InjectMocks
+    private UserController userController;
+
+    private MockMvc mockMvc;
     private ObjectMapper objectMapper;
 
-    @Test
-    @DisplayName("GET /api/users doit retourner la liste des utilisateurs")
-    void getAllUsers() throws Exception {
-        User user1 = new User(); user1.setId(1L); user1.setUsername("user1");
-        User user2 = new User(); user2.setId(2L); user2.setUsername("user2");
-        Mockito.when(userService.getAllUsers()).thenReturn(Arrays.asList(user1, user2));
+    @BeforeEach
+    void setUp() {
+        mockMvc = MockMvcBuilders.standaloneSetup(userController).build();
+        objectMapper = new ObjectMapper();
+    }
 
+    @Test
+    void getAllUsers_returnsList() throws Exception {
+        // Arrange
+        User user = new User();
+        user.setId(1L);
+        user.setUsername("testuser");
+        when(userService.getAllUsers()).thenReturn(List.of(user));
+
+        // Act & Assert
         mockMvc.perform(get("/api/users"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(2)))
-                .andExpect(jsonPath("$[0].username").value("user1"))
-                .andExpect(jsonPath("$[1].username").value("user2"));
+                .andExpect(jsonPath("$[0].id").value(1))
+                .andExpect(jsonPath("$[0].username").value("testuser"));
     }
 
     @Test
-    @DisplayName("GET /api/users/{id} doit retourner l'utilisateur demandé")
-    void getUserById_found() throws Exception {
-        User user = new User(); user.setId(42L); user.setUsername("user42");
-        Mockito.when(userService.getUserById(42L)).thenReturn(Optional.of(user));
+    void getUserById_ok() throws Exception {
+        // Arrange
+        User user = new User();
+        user.setId(1L);
+        user.setUsername("testuser");
+        when(userService.getUserById(1L)).thenReturn(Optional.of(user));
 
-        mockMvc.perform(get("/api/users/42"))
+        // Act & Assert
+        mockMvc.perform(get("/api/users/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.username").value("user42"));
+                .andExpect(jsonPath("$.id").value(1))
+                .andExpect(jsonPath("$.username").value("testuser"));
     }
 
     @Test
-    @DisplayName("GET /api/users/{id} doit retourner 404 si non trouvé")
     void getUserById_notFound() throws Exception {
-        Mockito.when(userService.getUserById(99L)).thenReturn(Optional.empty());
+        // Arrange
+        when(userService.getUserById(99L)).thenReturn(Optional.empty());
 
+        // Act & Assert
         mockMvc.perform(get("/api/users/99"))
                 .andExpect(status().isNotFound());
     }
 
     @Test
-    @DisplayName("POST /api/users doit créer un utilisateur")
-    void createUser_ok() throws Exception {
+    void getUserByUsername_ok() throws Exception {
+        // Arrange
         User user = new User();
-        user.setUsername("nouveau");
-        user.setEmail("nouveau@example.com");
-        user.setPassword("mdp");
-        User saved = new User();
-        saved.setId(1L);
-        saved.setUsername("nouveau");
-        saved.setEmail("nouveau@example.com");
-        saved.setPassword("mdp");
+        user.setId(1L);
+        user.setUsername("testuser");
+        when(userService.getUserByUsername("testuser")).thenReturn(Optional.of(user));
 
-        Mockito.when(userService.emailExists("nouveau@example.com")).thenReturn(false);
-        Mockito.when(userService.createUser(any(User.class))).thenReturn(saved);
+        // Act & Assert
+        mockMvc.perform(get("/api/users/by-username/testuser"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1))
+                .andExpect(jsonPath("$.username").value("testuser"));
+    }
 
+    @Test
+    void getUserByUsername_notFound() throws Exception {
+        // Arrange
+        when(userService.getUserByUsername("unknown")).thenReturn(Optional.empty());
+
+        // Act & Assert
+        mockMvc.perform(get("/api/users/by-username/unknown"))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void createUser_ok() throws Exception {
+        // Arrange
+        User user = new User();
+        user.setId(1L);
+        user.setUsername("newuser");
+        user.setEmail("new@example.com");
+
+        when(userService.emailExists("new@example.com")).thenReturn(false);
+        when(userService.createUser(any(User.class))).thenReturn(user);
+
+        // Act & Assert
         mockMvc.perform(post("/api/users")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(user)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1L))
-                .andExpect(jsonPath("$.username").value("nouveau"))
-                .andExpect(jsonPath("$.email").value("nouveau@example.com"));
+                .andExpect(jsonPath("$.id").value(1))
+                .andExpect(jsonPath("$.username").value("newuser"));
     }
 
     @Test
-    @DisplayName("POST /api/users doit renvoyer 400 si email existe déjà")
     void createUser_emailExists() throws Exception {
+        // Arrange
         User user = new User();
-        user.setUsername("duplicate");
-        user.setEmail("duplicate@example.com");
-        user.setPassword("mdp");
+        user.setEmail("existing@example.com");
 
-        Mockito.when(userService.emailExists("duplicate@example.com")).thenReturn(true);
+        when(userService.emailExists("existing@example.com")).thenReturn(true);
 
+        // Act & Assert
         mockMvc.perform(post("/api/users")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(user)))
@@ -124,67 +160,61 @@ class UserControllerTest {
     }
 
     @Test
-    @DisplayName("DELETE /api/users/{id} doit supprimer un utilisateur")
     void deleteUser_ok() throws Exception {
-        User user = new User(); user.setId(55L);
-        Mockito.when(userService.getUserById(55L)).thenReturn(Optional.of(user));
+        // Arrange
+        when(userService.getUserById(1L)).thenReturn(Optional.of(new User()));
 
-        mockMvc.perform(delete("/api/users/55"))
+        // Act & Assert
+        mockMvc.perform(delete("/api/users/1"))
                 .andExpect(status().isNoContent());
     }
 
     @Test
-    @DisplayName("DELETE /api/users/{id} doit retourner 404 si non trouvé")
     void deleteUser_notFound() throws Exception {
-        Mockito.when(userService.getUserById(77L)).thenReturn(Optional.empty());
+        // Arrange
+        when(userService.getUserById(99L)).thenReturn(Optional.empty());
 
-        mockMvc.perform(delete("/api/users/77"))
+        // Act & Assert
+        mockMvc.perform(delete("/api/users/99"))
                 .andExpect(status().isNotFound());
     }
 
-    // ===============================
-    // ===== TESTS ENDPOINTS AVANCÉS ==
-    // ===============================
-
     @Test
-    @DisplayName("GET /api/users/{id}/projects doit retourner les projets du user")
-    void getProjectsForUser() throws Exception {
+    void getProjectsForUser_ok() throws Exception {
+        // Arrange
         Project project = new Project();
-        project.setId(10L); project.setName("ProjectX");
-        Mockito.when(projectMemberService.findProjectsByUserId(1L))
-                .thenReturn(Collections.singletonList(project));
+        project.setId(1L);
+        when(projectMemberService.findProjectsByUserId(1L)).thenReturn(List.of(project));
 
+        // Act & Assert
         mockMvc.perform(get("/api/users/1/projects"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(10L))
-                .andExpect(jsonPath("$[0].name").value("ProjectX"));
+                .andExpect(jsonPath("$[0].id").value(1));
     }
 
     @Test
-    @DisplayName("GET /api/users/{id}/notifications doit retourner les notifications du user")
-    void getNotificationsForUser() throws Exception {
-        Notification notif = new Notification();
-        notif.setId(100L); notif.setUserId(1L); notif.setContent("Notif content");
-        Mockito.when(notificationService.getByUserId(1L))
-                .thenReturn(Collections.singletonList(notif));
+    void getNotificationsForUser_ok() throws Exception {
+        // Arrange
+        Notification notification = new Notification();
+        notification.setId(1L);
+        when(notificationService.getByUserId(1L)).thenReturn(List.of(notification));
 
+        // Act & Assert
         mockMvc.perform(get("/api/users/1/notifications"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(100L))
-                .andExpect(jsonPath("$[0].content").value("Notif content"));
+                .andExpect(jsonPath("$[0].id").value(1));
     }
 
     @Test
-    @DisplayName("GET /api/users/{id}/tasks doit retourner les tâches assignées au user")
-    void getAssignedTasksForUser() throws Exception {
+    void getAssignedTasksForUser_ok() throws Exception {
+        // Arrange
         Task task = new Task();
-        task.setId(5L); task.setName("Ma tâche");
-        Mockito.when(taskAssignmentService.findTasksAssignedToUser(1L))
-                .thenReturn(Collections.singletonList(task));
+        task.setId(1L);
+        when(taskAssignmentService.findTasksAssignedToUser(1L)).thenReturn(List.of(task));
 
+        // Act & Assert
         mockMvc.perform(get("/api/users/1/tasks"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(5L))
-                .andExpect(jsonPath("$[0].name").value("Ma tâche"));
+                .andExpect(jsonPath("$[0].id").value(1));
     }
 }
